<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/appbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/bgc"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:id="@+id/collapsingToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:collapsedTitleTextColor="?attr/tc"
        app:contentScrim="?attr/toolbar_bg"
        app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlwaysCollapsed"
        app:titleCollapseMode="fade"
        app:toolbarId="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/bgc"
            android:paddingBottom="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_userBlock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/bgc"
                android:paddingBottom="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardView_avatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginTop="12dp"
                    app:cardCornerRadius="40dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/imageView_avatar"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:background="?attr/bg_internal"
                        android:src="@drawable/ic_round_person_24" />

                </com.google.android.material.card.MaterialCardView>

                <LinearLayout
                    android:id="@+id/linearLayout_mainInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@+id/cardView_avatar"
                    app:layout_constraintStart_toEndOf="@+id/cardView_avatar"
                    app:layout_constraintTop_toTopOf="@+id/cardView_avatar">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textView_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:paddingBottom="2dp"
                        android:text="@string/click_to_login"
                        android:textColor="?attr/tc"
                        android:textSize="18sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textView_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="4dp"
                        android:text="@string/profile_id"
                        android:textColor="@color/gray"
                        android:textSize="14sp"
                        android:visibility="gone" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/linearLayout_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:paddingBottom="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraint_userBlock">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textView_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/show_info"
                    android:textColor="@color/gray"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/imageView_avatar"
                    app:layout_constraintTop_toTopOf="@+id/imageView_avatar" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="3dp"
                    android:src="@drawable/ic_baseline_info_24"
                    android:tint="@color/gray" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.CollapsingToolbarLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/bg_internal"
        android:textAlignment="center"
        android:theme="@style/TabLayoutTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:tabGravity="fill"
        app:tabIndicatorFullWidth="false"
        app:tabMode="scrollable"
        app:tabSelectedTextColor="?attr/tc"
        app:tabTextColor="@color/gray" />

</com.google.android.material.appbar.AppBarLayout>